...
                GameScreen(
                    gameState.copy(editMode = editorState.isOpen),
                    gameActions.copy(
                        settings = { requestNavigation("settings") },
                        about = { requestNavigation("about") },
                    ),
                    Modifier.testTag("cheats-screen"),
                    editorState,
                    editorActions,
                    GameScreenContent.Cheats,
                    onOpenGame = { requestNavigation("game") },
                )
            }
...
                    onShowMemoryPageChanged = settingsActions.showMemoryPage,
                    onDetachDmntBeforeConnectChanged = settingsActions.detachDmntBeforeConnect,
                    onEditorChanged = settingsActions.editorChanged,
                    onSaveEditor = settingsActions.saveEditor,
                    onDismissEditor = settingsActions.dismissEditor,
                    messages = settingsMessages,
                    modifier = Modifier.testTag("settings-content"),
                )
            }
            composable("about") { AboutScreen(versionName, navController::popBackStack, Modifier.testTag("about-content")) }
        }
    }

...
